Fix featured image alignment

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -324,7 +324,6 @@ main {
     max-height: 300px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     overflow: hidden;
   }
